// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SellSummary should render the SellSummary view 1`] = `
<Screen
  header={<SellSummaryHeader />}
>
  <ForwardRef
    contentContainerStyle={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
  >
    <SellOfferSummary />
  </ForwardRef>
  <Button
    disabled={false}
    loading={false}
    onPress={[MockFunction]}
    style={
      {
        "alignSelf": "center",
      }
    }
  >
    next
  </Button>
</Screen>
`;

exports[`SellSummary should render the SellSummary view with the publish button disabled 1`] = `
<Screen
  header={<SellSummaryHeader />}
>
  <ForwardRef
    contentContainerStyle={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
  >
    <SellOfferSummary />
  </ForwardRef>
  <Button
    disabled={true}
    loading={false}
    style={
      {
        "alignSelf": "center",
      }
    }
  >
    next
  </Button>
</Screen>
`;
